--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/components": "^11.2.0",
+    "@vueuse/core": "^11.2.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
